--- a/nivel1.html
+++ b/nivel1.html
@@ -11,14 +11,14 @@
     <p>Identifique as definições e os usos das variáveis no código abaixo:</p>
     <pre>
 def calculate_total(price, tax):
-    total = price + (price * tax)  # Definição de 'total'
-    return total  # Uso de 'total'
+    total = price + (preco * taxa)  
+    return total  
 
 def main():
-    price = 100  # Definição de 'price'
-    tax = 0.05  # Definição de 'tax'
-    result = calculate_total(price, tax)  # Uso de 'price' e 'tax'
-    print(result)  # Uso de 'result'
+    preco = 100  
+    taxa = 0.05  # 
+    result = calculate_total(preco, taxa) 
+    print(result)  
 
 main()
     </pre>
