--- a/nivel1.html
+++ b/nivel1.html
@@ -10,9 +10,9 @@
     <h1>Nível 1: Identificação de Definições e Usos</h1>
     <p>Identifique as definições e os usos das variáveis no código abaixo:</p>
     <pre>
-def calculate_total(price, tax):
-    total = price + (preco * taxa)  
-    return total  
+def calculate_total(preco, taxa):
+    total = preco + (preco * taxa)  
+    return total 
 
 def main():
     preco = 100  
