--- a/nivel1.html
+++ b/nivel1.html
@@ -16,7 +16,7 @@ def calculate_total(preco, taxa):
 
 def main():
     preco = 100  
-    taxa = 0.05  # 
+    taxa = 0.05  
     result = calculate_total(preco, taxa) 
     print(result)  
 
